* added more to openhab template processor